controllers and index updates

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB URI
-MONGODB_URI=mongodb://your_mongodb_host:your_mongodb_port/your_database_name
+MONGODB_URI=mongodb+srv://bootcamp:bootcamp@cluster0.9g8czej.mongodb.net/?retryWrites=true&w=majority
 # Database Configuration
 DB_NAME='socialdb'
 DB_USER='root'
